# query-language

./: README.md  query-language.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
