name:                query-language
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/andrewthad/query-language#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2017 Andrew Martin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:
      base >= 4.7 && < 5
    , containers
    , vector
    , witherable
    , text
    , disjoint-set
  default-language:    Haskell2010

executable query-language
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , query-language
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/query-language
